--- a/css/estilos.css
+++ b/css/estilos.css
@@ -97,7 +97,7 @@ footer{
         }
         .carousel img{
             width: 100%;
-            height: 20rem;
+            height: 18rem;
         }
 
         /* estilos para centrar los textos */
@@ -105,6 +105,18 @@ footer{
     text-align: center;
     margin: 1.5rem 0;
 }
+
+        /* Estilos para pagina productos */
+
+
+    .container img{
+        height: 90%;
+        width: 90%;
+    }
+    .col-md-4{
+        text-align: center;
+    }
+
         /* MEDIA QUERIES    */
 
 @media screen and (max-width:470px) {
@@ -114,6 +126,23 @@ footer{
 }
 
 @media screen and (min-width:576px) {
+    /* pagina productos */
+    .row{
+        margin: 2rem;
+    }
+    .container img{
+        height: 12rem;
+        width: 12rem;
+    }
+}
+
+@media screen and (min-width:768px){
+    /* pagina galeria */
+    .carousel img{
+        width: 100%;
+        height: 21rem;
+    }
+    /* pagina producto */
 
 }
 @media screen and (min-width:992px){
@@ -161,6 +190,13 @@ footer{
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    /* pagina productos */
+
+    .container img{
+        height: 15rem;
+        width: 15rem;
     }
 
 }
