--- a/css/estilos.css
+++ b/css/estilos.css
@@ -117,6 +117,30 @@ footer{
         text-align: center;
     }
 
+    /* Estilo para pagina recetas */
+
+    .main_recetas h1{
+        margin-top: 2rem;
+        text-align: center;
+    }
+
+    .section_recetas{
+        margin: 3rem 0 2rem 0;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+
+    .div_imagen_recetas{
+        width: 100%;
+        text-align: center;
+    }
+    .div_imagen_recetas img{
+        height: 16rem;
+        width: 80%;
+    }
+
         /* MEDIA QUERIES    */
 
 @media screen and (max-width:470px) {
@@ -124,8 +148,20 @@ footer{
         margin: 2rem 0;
     }
 }
-
+@media screen and (min-width:470px) {
+    /* pagina recetas */
+    .div_imagen_recetas img{
+        height: 18rem;
+        width: 80%;
+    }
+    
+}
 @media screen and (min-width:576px) {
+    /* pagina recetas */
+    .div_imagen_recetas img{
+        height: 21rem;
+        width: 80%;
+    }
     /* pagina productos */
     .row{
         margin: 2rem;
@@ -137,6 +173,20 @@ footer{
 }
 
 @media screen and (min-width:768px){
+    /* pagina recetas */
+    .section_recetas{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+    .div_imagen_recetas{
+        width: 40%;
+    }
+    .div_imagen_recetas img{
+        height: 14rem;
+        width: 80%;
+    
+    }
     /* pagina galeria */
     .carousel img{
         width: 100%;
@@ -163,6 +213,12 @@ footer{
     .nav-item{
         margin-left: 1.3rem;
     }
+
+    /* pagina recetas */
+    .div_imagen_recetas{
+        width: 30%;
+    }
+
     /* MEDIA QUERIES PARA PAGINA INICIO */
     
     .section_main{
@@ -199,4 +255,11 @@ footer{
         width: 15rem;
     }
 
+}
+
+@media screen and (min-width:1220px) {
+    /* pagina recetas */
+    .div_imagen_recetas{
+        width: 25%;
+    }
 }
