--- a/SCSS/views-mains/_contacto.scss
+++ b/SCSS/views-mains/_contacto.scss
@@ -15,8 +15,8 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding-top: 1rem;
-    background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+    padding: 1rem 0 2rem 0;
+    background-image: linear-gradient(to top, #30cfd0 0%, #1e0867 100%);
 
     .item_formulario{
         display: flex;
@@ -33,9 +33,9 @@ textarea{
     display: flex;
     justify-content: center;
     width: 2rem;
-    border: solid;
     padding: 0 4rem;
     align-self: center;
+    box-shadow: 2px 0 2px 3px rgb(25, 21, 101);
     
     .btn:hover{
         outline-offset: 3px;
