--- a/css/styles.css
+++ b/css/styles.css
@@ -15,14 +15,13 @@ header {
 
 footer {
   height: 17vh;
-  margin-top: 1.5rem;
   padding-top: 1rem;
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
   justify-content: space-evenly;
-  background-color: rgb(255, 123, 0);
-  background-image: radial-gradient(circle farthest-corner at 10% 20%, rgb(0, 221, 214) 0%, rgb(51, 102, 255) 90%);
+  background-image: linear-gradient(to right, #30cfd0 0%, #1e0867 100%);
+  box-shadow: 0 2px 2px 5px rgb(17, 0, 58);
 }
 footer .redes {
   display: flex;
@@ -30,11 +29,25 @@ footer .redes {
   gap: 1.6rem;
 }
 footer .redes a {
-  color: white;
   font-size: 1.4rem;
 }
 footer .redes a i:hover {
-  color: rgb(3, 213, 251);
+  color: rgb(4, 152, 163);
+}
+footer .redes .red--instagram {
+  color: white;
+  border-radius: 50%;
+  padding: 1px 8px 2px 6px;
+}
+footer .redes .red--whatsapp {
+  color: white;
+  border-radius: 50%;
+  padding: 1px 8px 3px 7px;
+}
+footer .redes .red--twitter {
+  color: white;
+  border-radius: 50%;
+  padding: 1px 8px 3px 7px;
 }
 
 .container-fluid {
@@ -43,7 +56,7 @@ footer .redes a i:hover {
 }
 .container-fluid .navbar-toggler {
   color: rgb(10, 10, 10);
-  background-color: rgb(5, 119, 119);
+  background-color: rgb(4, 152, 163);
 }
 .container-fluid .logo_nav {
   border-radius: 20%;
@@ -160,8 +173,8 @@ footer .redes a i:hover {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding-top: 1rem;
-  background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+  padding: 1rem 0 2rem 0;
+  background-image: linear-gradient(to top, #30cfd0 0%, #1e0867 100%);
 }
 .formulario .item_formulario {
   display: flex;
@@ -180,9 +193,9 @@ textarea {
   display: flex;
   justify-content: center;
   width: 2rem;
-  border: solid;
   padding: 0 4rem;
   align-self: center;
+  box-shadow: 2px 0 2px 3px rgb(25, 21, 101);
 }
 .btn .btn:hover {
   outline-offset: 3px;
@@ -251,8 +264,6 @@ textarea {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    background-color: rgb(255, 123, 0);
-    background-image: radial-gradient(circle farthest-corner at 10% 20%, rgb(0, 221, 214) 0%, rgb(51, 102, 255) 90%);
     font-size: 1.1rem;
   }
 }
@@ -358,7 +369,7 @@ textarea {
   .section_contacto .formulario {
     width: 45%;
     border-radius: 5%;
-    box-shadow: #330867;
+    gap: 2rem;
   }
 }
 @media screen and (min-width: 1220px) {
@@ -379,6 +390,20 @@ textarea {
     width: 100%;
     height: 22rem;
   }
+  .section_contacto .formulario {
+    gap: 2.7rem;
+  }
+}
+.red--twitter {
+  background-image: linear-gradient(to top, rgb(6, 19, 195) 0%, rgb(18, 67, 228) 100%);
+}
+
+.red--instagram {
+  background-image: linear-gradient(to top, orange 0%, red 40%, rgb(244, 40, 217) 100%);
+}
+
+.red--whatsapp {
+  background-image: linear-gradient(to top, rgb(3, 171, 11) 0%, rgb(3, 223, 51) 100%);
 }
 
 /*# sourceMappingURL=styles.css.map */
