--- a/SCSS/utilities/_centrado-texto.scss
+++ b/SCSS/utilities/_centrado-texto.scss
@@ -1,4 +1,6 @@
 .centrar_texto{
     text-align: center;
     margin: 1.5rem 0;
+    text-shadow: -2.4px 0 rgb(85, 83, 83);
+    letter-spacing: $espacio-letras;
 }
