--- a/SCSS/layout/_navbar.scss
+++ b/SCSS/layout/_navbar.scss
@@ -14,6 +14,10 @@
                 img{
                     height: 180px;
                     border-radius: 20%;
+                    transition: transform 1.5s;
+                    &:hover{
+                        transform:scale(1.1,1.1);
+                    }
                 }
             }
             .collapse{
@@ -24,20 +28,22 @@
         .navbar-nav{
             margin-right: 2rem;
             }
-            .navbar a{
-                color: $primario;
-                background-color: black;
-            }
             .nav-item{
                 display: flex;
                 justify-content: end;
                 a{
                     padding: 8px;
+                    color: $primario;
+                    letter-spacing: $espacio-letras;
                     border-radius: 30%;
+                    background-color: black;
                     margin-top: 5px;
                     text-align: center;
+                    transition: transform 1s;
+                    
                     &:hover{
                         color: aliceblue;
+                        transform:scale(1.3,1.3);
                     }
                 }
                 
