--- a/SCSS/views-mains/_contacto.scss
+++ b/SCSS/views-mains/_contacto.scss
@@ -13,10 +13,11 @@
 .formulario{
     color: rgb(82, 252, 252);
     display: flex;
+    letter-spacing: 1.2px;
     flex-direction: column;
     gap: 1rem;
     padding: 1rem 0 2rem 0;
-    background-image: linear-gradient(to top, #30cfd0 0%, #1e0867 100%);
+    background-image: linear-gradient(to top, #30cfd0 0%, #1e0867 80%);
 
     .item_formulario{
         display: flex;
@@ -36,10 +37,15 @@ textarea{
     padding: 0 4rem;
     align-self: center;
     box-shadow: 2px 0 2px 3px rgb(25, 21, 101);
+    transition: background-color 2s;
     
-    .btn:hover{
+    &:hover{
+        color:black;
         outline-offset: 3px;
-        color: rgb(6, 6, 6);
+        background-color: blue;
+
 
     }
 }
+
+
