--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ footer {
   flex-direction: column-reverse;
   align-items: center;
   justify-content: space-evenly;
-  background-image: linear-gradient(to right, #30cfd0 0%, #1e0867 100%);
+  background-image: radial-gradient(ellipse 700px 80px, #30cfd0 0%, #1e0867 100%);
   box-shadow: 0 2px 2px 5px rgb(17, 0, 58);
 }
 footer .redes {
@@ -30,9 +30,13 @@ footer .redes {
 }
 footer .redes a {
   font-size: 1.4rem;
+  transition: transform 1s;
 }
 footer .redes a i:hover {
   color: rgb(4, 152, 163);
+}
+footer .redes a:hover {
+  transform: scale(1.4, 1.4);
 }
 footer .redes .red--instagram {
   color: white;
@@ -64,6 +68,10 @@ footer .redes .red--twitter {
 .container-fluid .logo_nav img {
   height: 180px;
   border-radius: 20%;
+  transition: transform 1.5s;
+}
+.container-fluid .logo_nav img:hover {
+  transform: scale(1.1, 1.1);
 }
 .container-fluid .collapse {
   justify-content: flex-end;
@@ -73,23 +81,23 @@ footer .redes .red--twitter {
   margin-right: 2rem;
 }
 
-.navbar a {
-  color: rgb(4, 152, 163);
-  background-color: black;
-}
-
 .nav-item {
   display: flex;
   justify-content: end;
 }
 .nav-item a {
   padding: 8px;
+  color: rgb(4, 152, 163);
+  letter-spacing: 1px;
   border-radius: 30%;
+  background-color: black;
   margin-top: 5px;
   text-align: center;
+  transition: transform 1s;
 }
 .nav-item a:hover {
   color: aliceblue;
+  transform: scale(1.3, 1.3);
 }
 
 .section_main {
@@ -131,6 +139,8 @@ footer .redes .red--twitter {
 .centrar_texto {
   text-align: center;
   margin: 1.5rem 0;
+  text-shadow: -2.4px 0 rgb(85, 83, 83);
+  letter-spacing: 1px;
 }
 
 .col-md-4 {
@@ -171,10 +181,11 @@ footer .redes .red--twitter {
 .formulario {
   color: rgb(82, 252, 252);
   display: flex;
+  letter-spacing: 1.2px;
   flex-direction: column;
   gap: 1rem;
   padding: 1rem 0 2rem 0;
-  background-image: linear-gradient(to top, #30cfd0 0%, #1e0867 100%);
+  background-image: linear-gradient(to top, #30cfd0 0%, #1e0867 80%);
 }
 .formulario .item_formulario {
   display: flex;
@@ -196,10 +207,12 @@ textarea {
   padding: 0 4rem;
   align-self: center;
   box-shadow: 2px 0 2px 3px rgb(25, 21, 101);
+  transition: background-color 2s;
 }
-.btn .btn:hover {
+.btn:hover {
+  color: black;
   outline-offset: 3px;
-  color: rgb(6, 6, 6);
+  background-color: blue;
 }
 
 @media screen and (max-width: 470px) {
@@ -403,7 +416,7 @@ textarea {
 }
 
 .red--whatsapp {
-  background-image: linear-gradient(to top, rgb(3, 171, 11) 0%, rgb(3, 223, 51) 100%);
+  background-image: linear-gradient(to top, rgb(3, 171, 11) 0%, rgb(2, 239, 109) 100%);
 }
 
 /*# sourceMappingURL=styles.css.map */
