--- a/SCSS/views-mains/_recetas.scss
+++ b/SCSS/views-mains/_recetas.scss
@@ -8,11 +8,30 @@
 
         .div_imagen_recetas{
             width: 100%;
+            margin-top: 3rem;
             text-align: center;
 
             img{
                 height: 16rem;
                 width: 80%;
+            }
+
+            h4{
+                margin: 1.5rem 0;
+            }
+
+            .lista_receta{
+                display: flex;
+                flex-direction: column;
+                padding-left: 3rem;
+                align-items: flex-start;
+                letter-spacing: 0.7px;
+                gap: 3px;
+
+                li{
+                    list-style-type: none;
+                    text-align: start;
+                }
             }
         }
     }
