--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,10 @@ footer .redes .red--twitter {
   color: aliceblue;
   transform: scale(1.3, 1.3);
 }
+.nav-item a.active {
+  text-shadow: 0 0 4px rgb(216, 217, 224);
+  transform: scale(1.6, 1.6);
+}
 
 .section_main {
   display: flex;
@@ -157,11 +161,27 @@ footer .redes .red--twitter {
 }
 .section_recetas .div_imagen_recetas {
   width: 100%;
+  margin-top: 3rem;
   text-align: center;
 }
 .section_recetas .div_imagen_recetas img {
   height: 16rem;
   width: 80%;
+}
+.section_recetas .div_imagen_recetas h4 {
+  margin: 1.5rem 0;
+}
+.section_recetas .div_imagen_recetas .lista_receta {
+  display: flex;
+  flex-direction: column;
+  padding-left: 3rem;
+  align-items: flex-start;
+  letter-spacing: 0.7px;
+  gap: 3px;
+}
+.section_recetas .div_imagen_recetas .lista_receta li {
+  list-style-type: none;
+  text-align: start;
 }
 
 .contenedor_de_imagen {
