--- a/SCSS/layout/_navbar.scss
+++ b/SCSS/layout/_navbar.scss
@@ -52,6 +52,7 @@
                     &.active{
                         text-shadow: 0 0 4px rgb(216, 217, 224);
                         transform:scale(1.6,1.6);
+                        color: black;
                     }
                 }
                 
