--- a/SCSS/views-mains/_index.scss
+++ b/SCSS/views-mains/_index.scss
@@ -16,6 +16,9 @@
 
     p{
         text-align: center;
+        padding: 0 1rem;
         margin: 1.5rem 0;
+        letter-spacing: 1px;
+        line-height: 200%;
     }
 }
