alt completados mas mejora diseño

--- a/SCSS/layout/_header.scss
+++ b/SCSS/layout/_header.scss
@@ -1,5 +1,6 @@
 header{
     
-    background-image: url(../images/fondo-nutricion.jpg);
+    background-image: url(../images/foto-header.jpg);
+    box-shadow: 0 5px 15px rgb(27, 26, 26);
     
 }
