--- a/SCSS/reset-body/_reset-body.scss
+++ b/SCSS/reset-body/_reset-body.scss
@@ -5,5 +5,8 @@
     font-family: 'Anton', sans-serif;
 }
 body{
-    background-color: #ebe6f8;
+    background-image: linear-gradient(to right,white 0%,rgb(129, 207, 255) 100%);
+}
+main{
+    padding-bottom: 1rem;
 }
