--- a/SCSS/views-mains/_galeria.scss
+++ b/SCSS/views-mains/_galeria.scss
@@ -1,13 +1,15 @@
 .main_galeria{
     height: 60vh;
+    padding-bottom: 5rem;
 
     .section_galeria{
         display: flex;
         justify-content: center;
+        padding-bottom: 3rem;
         
         img{
             width: 100%;
-            height: 18rem;
+            height: 16rem;
         }
 
         
