--- a/SCSS/mediaqueries/_desktop.scss
+++ b/SCSS/mediaqueries/_desktop.scss
@@ -139,12 +139,10 @@
                 
 
                 a{
-                    color: rgb(4, 152, 163);
-                    background-color: black;
-                    
-                    &:hover{
-                        color: aliceblue;
-                    }
+                    color: rgb(6, 6, 6);
+                    background-color:none;
+                    font-size: 1.2rem;
+                    text-shadow: 0 0 4px rgb(216, 217, 224);
                     
                 }
             }
