--- a/SCSS/utilities/_centrado-texto.scss
+++ b/SCSS/utilities/_centrado-texto.scss
@@ -1,6 +1,6 @@
 .centrar_texto{
     text-align: center;
-    margin: 1.5rem 0;
-    text-shadow: -2.4px 0 rgb(85, 83, 83);
+    padding: 1.5rem 0;
+    text-shadow: 0 0 4px rgb(38, 45, 99);
     letter-spacing: $espacio-letras;
 }
