--- a/SCSS/views-mains/_index.scss
+++ b/SCSS/views-mains/_index.scss
@@ -17,7 +17,10 @@
     p{
         text-align: center;
         padding: 0 1rem;
+        color: rgb(255, 255, 255);
         margin: 1.5rem 0;
         letter-spacing: 1px;
+        line-height: 150%;
+        text-shadow: 1px 2px 0px black, 0 0 40px rgb(0, 0, 120), 0 0 10px blue;
     }
 }
