--- a/css/styles.css
+++ b/css/styles.css
@@ -6,16 +6,21 @@
 }
 
 body {
-  background-color: #ebe6f8;
+  background-image: linear-gradient(to right, white 0%, rgb(129, 207, 255) 100%);
+}
+
+main {
+  padding-bottom: 1rem;
 }
 
 header {
-  background-image: url(../images/fondo-nutricion.jpg);
+  background-image: url(../images/foto-header.jpg);
+  box-shadow: 0 5px 15px rgb(27, 26, 26);
 }
 
 footer {
   height: 17vh;
-  padding-top: 1rem;
+  padding-top: 1.7rem;
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
@@ -87,10 +92,11 @@ footer .redes .red--twitter {
 }
 .nav-item a {
   padding: 8px;
-  color: rgb(4, 152, 163);
+  color: black;
+  text-shadow: 0 0 4px rgb(216, 217, 224);
   letter-spacing: 1px;
   border-radius: 30%;
-  background-color: black;
+  background-color: none;
   margin-top: 5px;
   text-align: center;
   transition: transform 1s;
@@ -122,20 +128,25 @@ footer .redes .red--twitter {
 .section_main p {
   text-align: center;
   padding: 0 1rem;
+  color: rgb(255, 255, 255);
   margin: 1.5rem 0;
   letter-spacing: 1px;
+  line-height: 150%;
+  text-shadow: 1px 2px 0px black, 0 0 40px rgb(0, 0, 120), 0 0 10px blue;
 }
 
 .main_galeria {
   height: 60vh;
+  padding-bottom: 5rem;
 }
 .main_galeria .section_galeria {
   display: flex;
   justify-content: center;
+  padding-bottom: 3rem;
 }
 .main_galeria .section_galeria img {
   width: 100%;
-  height: 18rem;
+  height: 16rem;
 }
 
 .carousel {
@@ -145,8 +156,8 @@ footer .redes .red--twitter {
 
 .centrar_texto {
   text-align: center;
-  margin: 1.5rem 0;
-  text-shadow: -2.4px 0 rgb(85, 83, 83);
+  padding: 1.5rem 0;
+  text-shadow: 0 0 4px rgb(38, 45, 99);
   letter-spacing: 1px;
 }
 
@@ -156,6 +167,7 @@ footer .redes .red--twitter {
 .col-md-4 img {
   height: 90%;
   width: 90%;
+  padding: 1.3rem 0;
 }
 
 .section_recetas {
@@ -346,11 +358,10 @@ textarea {
     margin-left: 1.3rem;
   }
   .container-fluid .navbar-nav .nav-item a {
-    color: rgb(4, 152, 163);
-    background-color: black;
-  }
-  .container-fluid .navbar-nav .nav-item a:hover {
-    color: aliceblue;
+    color: rgb(6, 6, 6);
+    background-color: none;
+    font-size: 1.2rem;
+    text-shadow: 0 0 4px rgb(216, 217, 224);
   }
   .section_recetas {
     display: flex;
