--- a/SCSS/views-mains/_productos.scss
+++ b/SCSS/views-mains/_productos.scss
@@ -5,5 +5,11 @@
         height: 90%;
         width: 90%;
         padding: 1.3rem 0;
+        opacity: 0.8;
+
+        &:hover{
+            opacity: 1;
+            zoom: 1.01;
+        }
     }
 }
