--- a/SCSS/views-mains/_recetas.scss
+++ b/SCSS/views-mains/_recetas.scss
@@ -14,6 +14,11 @@
             img{
                 height: 16rem;
                 width: 80%;
+                opacity: .8;
+
+                &:hover{
+                    opacity: 1;
+                }
             }
 
             h4{
