--- a/SCSS/layout/_footer.scss
+++ b/SCSS/layout/_footer.scss
@@ -6,7 +6,7 @@ footer{
     align-items: center;
     justify-content: space-evenly;
     background-image: $blue-gradient;
-    box-shadow:  0 2px 2px 5px rgb(17, 0, 58);
+    box-shadow:  1px 1px 13px 5px rgb(0, 0, 0);
     p{
         color: white;
     }
