--- a/SCSS/mediaqueries/_desktop.scss
+++ b/SCSS/mediaqueries/_desktop.scss
@@ -174,9 +174,13 @@
 
         p{
             display: flex;
-            align-items:center ;
+            justify-content: center;
+            align-items:center;
+            letter-spacing:2px;
+            line-height: 220%;
+            font-size: 1.2rem;
+            height: 28rem;
             width: 35%;
-            margin: 1.5rem 0;
             
         }
 
@@ -237,13 +241,14 @@
 
     .main_inicio img{
         height: 48rem;
-        width: 35rem;
+        width: 20rem;
     }
     .section_main p{
-        line-height: 240%;
+        line-height: 220%;
+        letter-spacing:1px;
         font-size: 1.3rem;
         font-family: Georgia, 'Times New Roman', Times, serif;
-        font-weight: 800;
+        font-weight: 700;
     }
 
     .carousel img{
@@ -253,7 +258,15 @@
 }
 
 @media screen and (min-width:1400px) {
-    
+    .section_main p{
+        line-height: 230%;
+        letter-spacing:1.2px;
+        font-size: 1.3rem;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-weight:700;
+        height:35rem ;
+    }
+
     .carousel img{
         width: 100%;
         height: 22rem;
