--- a/css/styles.css
+++ b/css/styles.css
@@ -25,8 +25,8 @@ footer {
   flex-direction: column-reverse;
   align-items: center;
   justify-content: space-evenly;
-  background-image: radial-gradient(ellipse 700px 80px, #30cfd0 0%, #1e0867 100%);
-  box-shadow: 0 2px 2px 5px rgb(17, 0, 58);
+  background-image: radial-gradient(ellipse 700px 80px, #a2d2ff 0%, #006bb3 100%);
+  box-shadow: 1px 1px 13px 5px rgb(0, 0, 0);
 }
 footer p {
   color: white;
@@ -395,9 +395,13 @@ textarea {
   }
   .section_main p {
     display: flex;
+    justify-content: center;
     align-items: center;
+    letter-spacing: 2px;
+    line-height: 220%;
+    font-size: 1.2rem;
+    height: 28rem;
     width: 35%;
-    margin: 1.5rem 0;
   }
   footer {
     height: 17vh;
@@ -437,13 +441,14 @@ textarea {
   }
   .main_inicio img {
     height: 48rem;
-    width: 35rem;
+    width: 20rem;
   }
   .section_main p {
-    line-height: 240%;
+    line-height: 220%;
+    letter-spacing: 1px;
     font-size: 1.3rem;
     font-family: Georgia, "Times New Roman", Times, serif;
-    font-weight: 800;
+    font-weight: 700;
   }
   .carousel img {
     width: 100%;
@@ -451,6 +456,14 @@ textarea {
   }
 }
 @media screen and (min-width: 1400px) {
+  .section_main p {
+    line-height: 230%;
+    letter-spacing: 1.2px;
+    font-size: 1.3rem;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    font-weight: 700;
+    height: 35rem;
+  }
   .carousel img {
     width: 100%;
     height: 22rem;
@@ -476,7 +489,7 @@ textarea {
 }
 
 .red--instagram:hover {
-  box-shadow: 0 0 15px rgb(255, 117, 42);
+  box-shadow: 0 0 20px rgb(250, 60, 196);
 }
 
 .red--whatsapp:hover {
