--- a/SCSS/views-mains/_galeria.scss
+++ b/SCSS/views-mains/_galeria.scss
@@ -1,6 +1,7 @@
 .main_galeria{
-    height: 60vh;
+    height: 65vh;
     padding-bottom: 5rem;
+    margin-bottom: 1rem;
 
     .section_galeria{
         display: flex;
