--- a/SCSS/mediaqueries/_desktop.scss
+++ b/SCSS/mediaqueries/_desktop.scss
@@ -1,12 +1,15 @@
 @media screen and (max-width:470px){
-    
-    .carousel{
+    .main_galeria{
+        height: 60vh;
+        
+        .carousel{
         margin: 2rem 0;
+        }
     }
 }
 
 @media screen and (min-width:470px){
-    
+
     .div_imagen_recetas {
         img{
             height: 18rem;
@@ -149,7 +152,28 @@
         
         }
     }
+            // galeria 
     
+    .main_galeria{
+        height: 88vh;
+
+        .section_galeria{
+        height: 80vh;
+
+        .carousel{
+            height: 100%;
+            width: 60%;
+    
+            .carousel-inner{
+                height: 90%;
+                .carousel-item img{
+                    height: 30rem;
+                }
+            }
+        }
+    }
+}
+
     .section_recetas{
         display: flex;
 
@@ -158,30 +182,43 @@
         }
     }
 
+        // pagina inicio
+
     .section_main{
-        display: flex;
-        flex-direction: row;
+        display: grid;
+        grid-template-columns: auto auto ;
+        grid-template-rows: auto auto auto auto ;
         justify-content: space-around;
 
         div{
-            height: auto;
-            width: 50%;
+            height: 80%;
+            width: 100%;
+            grid-column: 1/2;
+            grid-row: 1/5;
+            justify-self: center;
+            align-self: center;
             
             img{
-                width: 80%;
+                width: 90%;
             }
         }
 
-        p{
+        .parrafo_inicio{
             display: flex;
-            justify-content: center;
-            align-items:center;
-            letter-spacing:2px;
-            line-height: 220%;
-            font-size: 1.2rem;
-            height: 28rem;
-            width: 35%;
+            justify-self: center;
+            width: 70%;
+            line-height: 200%;
+            margin: 1.5rem 0;
+            grid-column: 2/3;
+            grid-row: 1/3;
             
+        }
+
+        .div_iframe{
+            grid-column: 2/3 ;
+            grid-row: 3/5;
+            height: 18rem;
+            width: 85%;
         }
 
     }
@@ -239,34 +276,51 @@
         }
     }
 
-    .main_inicio img{
-        height: 48rem;
-        width: 20rem;
-    }
-    .section_main p{
-        line-height: 220%;
-        letter-spacing:1px;
-        font-size: 1.3rem;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        font-weight: 700;
-    }
+    .main_inicio { 
+        img{
+            height: 48rem;
+            width: 35rem;
+        }
+        .parrafo_inicio{
+            line-height: 190%;
+            font-size: 1.2rem;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            font-weight: 800;
+        }
+        .div_iframe iframe{
+            height: 15rem;
+            width: 80%;
+        }
+    } 
 
-    .carousel img{
-        width: 100%;
-        height: 19rem;
+    // pagina galeria
+    .main_galeria{
+        height: 100vh;
+    
+    .section_galeria{
+        height: 90vh;
+
+        .carousel{
+            height: 100%;
+            width: 60%;
+
+            .carousel-inner{
+                height: 100%;
+                .carousel-item { 
+                    height: 60%;
+                        img{
+                            height: 38rem;
+                            width: 100%;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
 
 @media screen and (min-width:1400px) {
-    .section_main p{
-        line-height: 230%;
-        letter-spacing:1.2px;
-        font-size: 1.3rem;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        font-weight:700;
-        height:35rem ;
-    }
-
+    
     .carousel img{
         width: 100%;
         height: 22rem;
