--- a/SCSS/views-mains/_index.scss
+++ b/SCSS/views-mains/_index.scss
@@ -1,3 +1,4 @@
+
 .section_main{
     display: flex;
     flex-direction: column;
@@ -17,10 +18,29 @@
     p{
         text-align: center;
         padding: 0 1rem;
-        color: rgb(255, 255, 255);
+        color: rgb(250, 250, 255);
         margin: 1.5rem 0;
         letter-spacing: 1px;
         line-height: 150%;
-        text-shadow: 1px 2px 0px black, 0 0 40px rgb(0, 0, 120), 0 0 10px blue;
+        text-shadow: 1px 2px 0px rgb(21, 21, 22), 0 0 40px rgb(17, 17, 18), 0 0 10px blue;
+    }
+    .div_iframe{
+        display: flex;
+        flex-direction:column;
+        gap: 1rem;
+        padding-bottom: .6rem;
+        
+        .parrafo_iframe{
+            color: rgb(7, 7, 7);
+            font-size: 1.4rem;
+            font-weight: 800;
+            text-shadow: none;
+        }
+
+        iframe{
+            width: 80%;
+            height: 15rem;
+            align-self: center;
+        }
     }
 }
