--- a/css/styles.css
+++ b/css/styles.css
@@ -131,16 +131,34 @@ footer .redes .red--twitter {
 .section_main p {
   text-align: center;
   padding: 0 1rem;
-  color: rgb(255, 255, 255);
+  color: rgb(250, 250, 255);
   margin: 1.5rem 0;
   letter-spacing: 1px;
   line-height: 150%;
-  text-shadow: 1px 2px 0px black, 0 0 40px rgb(0, 0, 120), 0 0 10px blue;
+  text-shadow: 1px 2px 0px rgb(21, 21, 22), 0 0 40px rgb(17, 17, 18), 0 0 10px blue;
+}
+.section_main .div_iframe {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding-bottom: 0.6rem;
+}
+.section_main .div_iframe .parrafo_iframe {
+  color: rgb(7, 7, 7);
+  font-size: 1.4rem;
+  font-weight: 800;
+  text-shadow: none;
+}
+.section_main .div_iframe iframe {
+  width: 80%;
+  height: 15rem;
+  align-self: center;
 }
 
 .main_galeria {
-  height: 60vh;
+  height: 65vh;
   padding-bottom: 5rem;
+  margin-bottom: 1rem;
 }
 .main_galeria .section_galeria {
   display: flex;
@@ -263,7 +281,10 @@ textarea {
 }
 
 @media screen and (max-width: 470px) {
-  .carousel {
+  .main_galeria {
+    height: 60vh;
+  }
+  .main_galeria .carousel {
     margin: 2rem 0;
   }
 }
@@ -375,6 +396,22 @@ textarea {
     font-size: 1.2rem;
     text-shadow: 0 0 4px rgb(216, 217, 224);
   }
+  .main_galeria {
+    height: 88vh;
+  }
+  .main_galeria .section_galeria {
+    height: 80vh;
+  }
+  .main_galeria .section_galeria .carousel {
+    height: 100%;
+    width: 60%;
+  }
+  .main_galeria .section_galeria .carousel .carousel-inner {
+    height: 90%;
+  }
+  .main_galeria .section_galeria .carousel .carousel-inner .carousel-item img {
+    height: 30rem;
+  }
   .section_recetas {
     display: flex;
   }
@@ -382,26 +419,36 @@ textarea {
     width: 30%;
   }
   .section_main {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto auto;
     justify-content: space-around;
   }
   .section_main div {
-    height: auto;
-    width: 50%;
+    height: 80%;
+    width: 100%;
+    grid-column: 1/2;
+    grid-row: 1/5;
+    justify-self: center;
+    align-self: center;
   }
   .section_main div img {
-    width: 80%;
+    width: 90%;
   }
-  .section_main p {
+  .section_main .parrafo_inicio {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    letter-spacing: 2px;
-    line-height: 220%;
-    font-size: 1.2rem;
-    height: 28rem;
-    width: 35%;
+    justify-self: center;
+    width: 70%;
+    line-height: 200%;
+    margin: 1.5rem 0;
+    grid-column: 2/3;
+    grid-row: 1/3;
+  }
+  .section_main .div_iframe {
+    grid-column: 2/3;
+    grid-row: 3/5;
+    height: 18rem;
+    width: 85%;
   }
   footer {
     height: 17vh;
@@ -441,29 +488,40 @@ textarea {
   }
   .main_inicio img {
     height: 48rem;
-    width: 20rem;
+    width: 35rem;
   }
-  .section_main p {
-    line-height: 220%;
-    letter-spacing: 1px;
-    font-size: 1.3rem;
+  .main_inicio .parrafo_inicio {
+    line-height: 190%;
+    font-size: 1.2rem;
     font-family: Georgia, "Times New Roman", Times, serif;
-    font-weight: 700;
+    font-weight: 800;
   }
-  .carousel img {
+  .main_inicio .div_iframe iframe {
+    height: 15rem;
+    width: 80%;
+  }
+  .main_galeria {
+    height: 100vh;
+  }
+  .main_galeria .section_galeria {
+    height: 90vh;
+  }
+  .main_galeria .section_galeria .carousel {
+    height: 100%;
+    width: 60%;
+  }
+  .main_galeria .section_galeria .carousel .carousel-inner {
+    height: 100%;
+  }
+  .main_galeria .section_galeria .carousel .carousel-inner .carousel-item {
+    height: 60%;
+  }
+  .main_galeria .section_galeria .carousel .carousel-inner .carousel-item img {
+    height: 38rem;
     width: 100%;
-    height: 19rem;
   }
 }
 @media screen and (min-width: 1400px) {
-  .section_main p {
-    line-height: 230%;
-    letter-spacing: 1.2px;
-    font-size: 1.3rem;
-    font-family: Georgia, "Times New Roman", Times, serif;
-    font-weight: 700;
-    height: 35rem;
-  }
   .carousel img {
     width: 100%;
     height: 22rem;
